first section created

--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pie Recipe</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- Remember to link your styles -->
   </head>
   <body>
-    Apple Pie
+    <h1 class="title">Apple Pie</h1>
+    <div class="content">
+      <h2>
+        This was my grandmother's apple pie recipe. I have never seen another
+        one quite like it. It will always be my favorite and has won me several
+        first place prizes in local competitions. I hope it becomes one of your
+        favorites as well!
+      </h2>
+      <img id="image" src="images/recipe-info.png" alt="recipe info!!" />
+      <hr id="hr" />
+    </div>
+    <!-- Apple Pie
 
     This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
     be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
@@ -34,6 +46,6 @@
     that it does not run off.
 
     Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
-    degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
+    degrees C). Continue baking for 35 to 45 minutes, until apples are soft. -->
   </body>
 </html>
