--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -18,6 +18,24 @@
       </h2>
       <img id="image" src="images/recipe-info.png" alt="recipe info!!" />
       <hr id="hr" />
+
+      <h3 class="ingredients-title">Ingredients</h3>
+
+      <ol class="ingredient-list">
+        <li>1 recipe pastry for a 9 inch double crust pie </li>
+        <li>1/2 cup unsalted butter </li>
+        <li>3 tablespoons all-purpose flour</li>
+        <li>1/4 cup water</li>
+        <li>3 tablespoons all-purpose flour</li>
+        <li>1/4 cup water 1/2 cup white sugar</li>
+        <li>1/2 cup packed brown sugar</li>
+        <li>8 Granny Smith apples - peeled, cored and sliced</li>
+      </ol>
+
+
+      <img id="image" src="images/cooking-info.png" alt="cooking info!!" />
+
+      <hr>
     </div>
     <!-- Apple Pie
 
